2010-02-02  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/openbabelcsharp.i: Replace
	OBGridData::GetNumberOfSteps(int[3]) with a vector-based method

2010-01-31  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/openbabelcsharp.i: Add OBBuilder and fix bug in Downcast<>
	method (it wasn't finding the non-public casting methods).

2009-10-09  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefields/forcefielduff.cpp: Fix for Avogadro 1.0. Handle
	5-coordinate atoms by tracking axial and equatorial atoms
	separately. Also handle formal charges when determining
	coordination.

	* src/forcefield.cpp: Backport from Noel's bug-fix. Make sure to
	add all rotamers when doing systematic conformer searching.

	* src/builder.cpp: If no atoms are present, exit early.

2009-08-19  Noel O'Boyle  <baoilleach@gmail.com>

	* Windows Python build: Bump version to 1.5 and add support for Python
	3.1.

2009-08-18  Chris Morley

	* src/dlhandler_win32.cpp(getConvDirectory):changes which should affect
	only MSVC build. Get handle of this module, not the exe file. As found by
	Noel and by Mingyue Zheng this broke the Python bindings. 
	Correct the module name (different when debugging).
	OpenBabel2.2.3b_Windows_Installer.exe has this mod.
	
	* include/openbabel/dlhandler.h: minor doc change

2009-08-16  Chris Morley

	* windows-vc2005/Distribution/NSISScriptToCreateInstallerOBF.nsi
	Replace two instances of libinchi.dll with libstdinci.dll
	(The modified version was used for v2.2.3)

2009-08-01  Daniel Leidert  <daniel.leidert@wgdd.de>

	* doc/babel.1, doc/obchiral.1: Fixed "mdoc warning: Extraneous .Re".

2009-07-31  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* NEWS: Bump for 2.2.3 release.

2009-07-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/mmcifformat.cpp: Fix PR2824247 and 2824502,
	Contributed by Raik Brinkmann.

2009-07-28  Craig James <cjames@emolecules.com>

	* src/kekule.cpp Rewrote expand_kekule(), making it much simpler